istio-policies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: cart-allow-storefront-bff
  namespace: dev
spec:
  selector:
    matchLabels:
      app: cart
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/dev/sa/storefront-bff"]
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cart-retry
  namespace: dev
spec:
  hosts:
  - cart
  - cart.dev.svc.cluster.local
  http:
  - route:
    - destination:
        host: cart.dev.svc.cluster.local
        port:
          number: 8081
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,gateway-error,connect-failure,refused-stream
